--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   <h4 class="card-title">Bob's Computer Repair Shop Group Project WEB 450 Group Project</h4>
                   <p>This is a group project for Bob's Computer Repair Shop using the MEAN stack.</p>
                   <a href="https://bobscomputerrepair.herokuapp.com/" class="btn btn-outline-secondary">Application</a>
-                  <a href="https://github.com/adonner/bcrs" class="btn btn-outline-secondary">GitHub Repository</a>
+                  <a href="https://github.com/adonner/bcrs" class="btn btn-outline-secondary">GitHub</a>
                 </div>
               </div>
             </div>
