--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <div class="card">
                 <img class="card-img-top" src="img/Bobs.png" alt="Bob's Logo">
                 <div class="card-body">
-                  <h4 class="card-title">Bob's Computer Repair Shop Group Project WEB 450 Group Project</h4>
+                  <h4 class="card-title">Bob's Computer Repair WEB 450 Group Project</h4>
                   <p>This is a group project for Bob's Computer Repair Shop using the MEAN stack.</p>
                   <a href="https://bobscomputerrepair.herokuapp.com/" class="btn btn-outline-secondary">Application</a>
                   <a href="https://github.com/adonner/bcrs" class="btn btn-outline-secondary">GitHub</a>
