--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
               every week until my twin boys, Owen and Alexander were born.</p>
               <p>After five years I decided to it was time get off the road. I accepted the position of Director of Sales and Marketing for a local
                 company where my team and I were responsible for selling and developing e-commerce sites for key accounts in Nebraska and Iowa. </p>
-              <p>I am currently a student at Bellevue University studying Web Development.</p>
-            <p>I live in Omaha Nebraska with my beautiful wife, twin boys, and golden retriever.
+              <p>In March of 2020 I graduated from Bellevue University with a Bachelor's of Sciece in Web Development.
+                This degree covers MEAN stack development (Mongo, Express, Angular, and MongoDB).
+              </p>
+            <p>I live in Omaha Nebraska with my beautiful wife, twin boys, and polydactyl cat.
                 In my spare time, I enjoy camping, mountain biking, and hiking.</p>
           </div>
       </div>
@@ -135,6 +137,27 @@
           </div>
         </div>
     </div>
+
+    <div class="container-fluid padding">
+      <div class="row text-center padding">
+          <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+            <i class="fab fa-js-square"></i>
+            <h3>TypeScript</h3>
+          </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <i class="fab fa-angular"></i>
+            <h3>Angular</h3>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <i class="fas fa-cogs"></i>
+            <h3>Express</h3>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+          <i class="fas fa-database"></i>
+            <h3>MongoDB</h3>
+        </div>
+      </div>
+  </div>
 
   <!--- Portfolio -->
     <div class="container-fluid padding" id="portfolio">
