--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <p>After five years I decided to it was time get off the road. I accepted the position of Director of Sales and Marketing for a local
                 company where my team and I were responsible for selling and developing e-commerce sites for key accounts in Nebraska and Iowa. </p>
               <p>In March of 2020 I graduated from Bellevue University with a Bachelor's of Sciece in Web Development.
-                This degree covers MEAN stack development (Mongo, Express, Angular, and MongoDB).
+                This degree covers MEAN stack development (Mongo, Express, Angular, and Node.JS).
               </p>
             <p>I live in Omaha Nebraska with my beautiful wife, twin boys, and polydactyl cat.
                 In my spare time, I enjoy camping, mountain biking, and hiking.</p>
